resources/bookinfo/overlays/ambient/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ossm-bookinfo
  labels:
    istio.io/dataplane-mode: ambient
    # To see L7 traffic in Kiali
    istio.io/use-waypoint: waypoint
