resources/bookinfo/overlays/ambient/bookinfo-http-route.yaml
# Needed for Ambient Mesh, but this is technically just Bookinfo using the Gateway API
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo-http-route
  namespace: ossm-bookinfo
spec:
  parentRefs:
  - name: bookinfo-gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: Exact
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: Exact
        value: /login
    - path:
        type: Exact
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
